Fixed text and button overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -43,11 +43,11 @@ header {
 }
 
 button {
-    padding: 9px 25px;
+    padding: 9px 9px;
     background-color: rgba(0, 136, 169, 1);
     border: none;
     border-radius: 50px;
-    cursor: pointer;
+    cursor: hand;
     transition: all 0.3s ease 0s;
 }
 
@@ -121,5 +121,66 @@ img {
 }
 
 .DieHornet {
-    padding-left: 5px;
+    padding-left: 15px;
+}
+
+@media only screen and (max-width: 500px) {
+    .Index {
+        height: 250px;
+    }
+    .About {
+        height: 250px;
+    }
+    .Socials {
+        height: 250px;
+    }
+
+    .Projects {
+        height: 250px;
+    }
+
+    img {
+        border-radius: 50%;
+        height: 65px;
+        width: 65px;
+        padding-left: 10px;
+        padding-right: 10px
+    }
+
+    .SocialsNavBar {
+        padding-left: 14px;
+    }
+
+    .Github {
+        width: 75px;
+    }
+
+    .Discord {
+        width: 75px;
+    }
+
+    .Instagram {
+        width: 75px;
+    }
+
+    .Twitch {
+        width: 75px;
+    }
+
+    button  {
+        text-align: center;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+}
+
+@media only screen and (min-width: 500px) {
+    button {
+        padding: 9px 25px;
+        background-color: rgba(0, 136, 169, 1);
+        border: none;
+        border-radius: 50px;
+        cursor: hand;
+        transition: all 0.3s ease 0s;
+    }
 }
